Add basic zoom control

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,14 @@
         </label>
         <input type="submit" value="Load">
       </form>
+      <div class="controls">
+        <button class="btn-zoom-mode">
+          Change to 1x zoom
+        </button>
+      </div>
+      <div class="image-container scale-down">
+        Loading module, please wait…
+      </div>
     </main>
   </body>
 </html>
