Fix event handler leaking, add version indicator

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
         </button>
       </div>
       <div class="image-container scale-down">
+      </div>
+      <div class="status">
         Loading module, please wait…
       </div>
     </main>
