Implement partial load, remove service worker

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
         <input type="submit" value="Load">
       </form>
       <div class="controls">
+        <label>
+          <input type="checkbox" class="cb-partial-load"> Partial load
+        </label>
+        <label class="group-partial-load">
+          <input type="range" class="range-partial-load" min="0" max="1" step="1" value="1" disabled>
+          <span class="label-partial-load"></span>
+        </label>
+      </div>
+      <div class="controls">
         <button class="btn-zoom-mode">
           Change to 1x zoom
         </button>
